<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@drawable/login_image"
    android:backgroundTintMode="src_over"
    android:visibility="visible">


    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textLogin"
        android:layout_alignEnd="@+id/textLogin"
        android:layout_marginBottom="57dp"
        android:background="@color/colorGreen"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/app_name"
        android:src="@drawable/farm"
        android:layout_alignEnd="@+id/app_name"
        android:layout_alignStart="@+id/app_name"
        android:background="@color/colorGreen"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editEmail"
        android:layout_alignStart="@+id/editEmail"
        android:layout_marginBottom="1dp"
        android:text=" Email:"
        android:textAppearance="@style/AlertDialog.AppCompat"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorWhite"
        android:ellipsize="none"
        android:hint="@string/editEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editEmail"
        android:layout_below="@+id/editEmail"
        android:layout_marginTop="25dp"
        android:text=" Password:"
        android:layout_marginBottom="1dp"
        android:textColor="@color/colorWhite"
        android:textAppearance="@style/AlertDialog.AppCompat"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/textpass"
        android:layout_below="@+id/textpass"
        android:background="@color/colorWhite"
        android:hint="@string/editPass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/app_name"
        android:layout_below="@+id/editPass"
        android:layout_marginTop="26dp"
        android:background="@color/colorGreen"
        android:text="@string/loginButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <TextView

        android:id="@+id/signup"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/textEmail"
        android:background="@color/colorGreen"
        android:backgroundTint="@color/colorGreen"
        android:backgroundTintMode="src_over"
        android:text="@string/openAccount"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

</RelativeLayout>
