<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jcoder.gaurav.krishikalyan.MainActivity">

    <ImageView
        android:id="@+id/HomeImage"
        android:layout_width="91dp"
        android:layout_height="123dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        app:srcCompat="@drawable/farm"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HomeImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="158dp"
        android:text="Welcome" />

    <TextView
        android:id="@+id/stat_text"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_below="@+id/welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="215dp"
        android:text="choose your preferred language" />

    <TextView
        android:id="@+id/English_text"
        android:layout_width="411dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stat_text"
        android:layout_marginTop="60dp"
        android:text="@string/English_lang"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="260dp" />

    <com.jcoder.gaurav.krishikalyan.HindiText
        android:id="@+id/Hindi_text"
        android:layout_width="411dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/English_text"
        android:layout_marginTop="50dp"
        android:text="@string/Hindi_lang"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="310dp" />

    <com.jcoder.gaurav.krishikalyan.HindiText
        android:id="@+id/Gujarati_text"
        android:layout_width="411dp"
        android:layout_height="27dp"
        android:layout_below="@+id/Hindi_text"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="310dp"
        android:text="ગુજરાતી" />

    <TextView
        android:id="@+id/statment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/welcome_text"
        android:layout_below="@+id/stat_text"
        android:layout_marginTop="8dp"
        android:text="@string/Statement"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="215dp" />

</RelativeLayout>
